--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
-  "name": "primevue-tailwind-preset-template",
-  "private": true,
+  "name": "pure-accordion",
   "version": "0.0.0",
   "type": "module",
   "scripts": {
